# superslice-rs

./: .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
