# Copyright 2017 Alkis Evlogimenos
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ordslice"
version = "0.2.0"
authors = ["Alkis Evlogimenos <alkis@evlogimenos.com>"]
description = "Extensions for ordered slices"
homepage = "https://github.com/alkis/ordslice-rs"
repository = "https://github.com/alkis/ordslice-rs"
keywords = ["slice", "ord", "performance"]
categories = ["algorithms"]
readme = "README.md"
license = "Apache-2.0"

[lib]
name = "ordslice"
bench = false

[dev-dependencies]
rand = "0.3"

[profile.bench]
opt-level = 3

[badges]
travis-ci = { repository = "alkis/ordslice-rs" }
